[package]
name = "curl-include-impl"
version = "0.0.1"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Implementation crate for curl-include"
keywords = []
categories = []
repository = ""
publish = false # You should at least look at this file before you publish

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-hack = "0.5.11"
quote = "1.0"
syn = "1.0"
