[package]
name = "request-include"
version = "0.1.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Request at compile time"
keywords = ["include", "macro", "const"]
readme = "../README.md"
repository = "https://github.com/spenserblack/request-include-rs"

[dependencies]
proc-macro-hack = "0.5.11"
request-include-impl = { path = "../request_include_impl" }
