[package]
name = "request-include-impl"
version = "0.1.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Implementation crate for request-include"
keywords = []
categories = []
repository = "https://github.com/spenserblack/request-include-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-hack = "0.5.11"
quote = "1.0"
reqwest = { version = "0.11.0", features = ["blocking"] }
syn = "1.0"
